--- a/index.html
+++ b/index.html
@@ -24,6 +24,20 @@
             width: 100%;
             height: 100%;
         }
+        .small-heading {
+            font-size: 1em;
+            font-weight: normal;
+            color: #444;
+            margin-top: 20px;
+            text-align: center;
+        }
+        .author {
+            font-size: 0.9em;
+            text-align: center;
+            margin-top: 5px;
+            color: #555;
+        }
+
         .results-section {
             margin-top: 20px;
         }
@@ -39,16 +53,31 @@
             font-size: 0.9em;
             color: #666;
         }
+        h1 {
+            text-align: center;
+        }
     </style>
 </head>
 <body>
     <div class="container">
-        <h1>ALTER3 + LLM</h1>
+        <h1>From Text to Motion: Harnessing GPT-4 for the Autonomous Pose Generation in Humanoid Robot ALTER3</h1>
+        <p class="author">Takahide Yoshida, Atsushi Masumori and Takashi Ikegami</p> 
         <p>We report the development of the first humanoid robot capable of generating spontaneous motion through the use of a Large Language Model (LLM), specifically GPT-4. By integrating GPT-4 into our proprietary android, Alter3, we have effectively endowed the LLM with a form of embodiment, a feature generally considered absent in LLMs. Intriguingly, this setup allows the android to adopt various poses, such as a 'selfie' stance, without explicit programming for each body part, demonstrating zero-shot learning capabilities. Verbal feedback can be used to adjust poses, eliminating the need for fine-tuning. However, challenges persist in terms of real-time generation speed and the duration for which a conversation can be maintained with Alter3, currently limited to 10-30 minutes. We discuss potential solutions for these issues.</p>
         
         <!-- Video Embedding -->
         <div class="video-container">
             <iframe width="423" height="752" src="https://www.youtube.com/embed/SAc-O5FDJ4k" title="play the metal" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </div>
+        <p class="video-caption">Video 1: Humanoid robot ALTER3 performing tasks with GPT-4 integration</p> <!-- Video caption -->
+
+        <!-- Small Heading Example -->
+        <h2 class="small-heading">Experimental Video Analysis</h2> <!-- Small heading for a new section -->
+
+        <div class="video-container">
+            <iframe width="423" height="752" src="https://www.youtube.com/embed/Npa0aBJrUS4" title="pretend ghost" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </div>
+        <div class="video-container">
+            <iframe width="423" height="752" src="https://www.youtube.com/embed/qNldkPX-y0w" title="shy" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
         <!-- Results Section -->
         <div class="results-section">
