--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
             padding-top: 25px;
             height: 0;
         }
+        .video-caption {
+            text-align: center;
+            font-size: 0.9em;
+            color: #666;
+            margin-top: 5px;
+        }
         .video-container iframe {
             position: absolute;
             top: 0;
@@ -32,7 +38,7 @@
             text-align: center;
         }
         .author {
-            font-size: 2.0em;
+            font-size: 1.5em;
             text-align: center;
             margin-top: 5px;
             color: #2ec7ff;
