--- a/index.html
+++ b/index.html
@@ -78,50 +78,50 @@
         <p class="video-caption">Video 1: Humanoid robot ALTER3 performing tasks with GPT-4 integration</p> <!-- Video caption -->
 
         <!-- Small Heading Example -->
-        <h2 class="small-heading">Experimental Video Analysis</h2> <!-- Small heading for a new section -->
+        <h2 class="small-heading">pretend the ghost</h2> <!-- Small heading for a new section -->
         <div class="video-container">
             <iframe width="423" height="752" src="https://www.youtube.com/embed/Npa0aBJrUS4" title="pretend ghost" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
         <p class="video-caption">Video 1: Humanoid robot ALTER3 performing tasks with GPT-4 integration</p> <!-- Video caption -->
 
-        <h2 class="small-heading">Experimental Video Analysis</h2> <!-- Small heading for a new section -->
+        <h2 class="small-heading">I was enjoying a movie while eating popcorn at the theater when I realized that I was actually eating the popcorn of the person next to me.</h2> <!-- Small heading for a new section -->
         <div class="video-container">
             <iframe width="423" height="752" src="https://www.youtube.com/embed/qNldkPX-y0w" title="shy" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
         <p class="video-caption">Video 1: Humanoid robot ALTER3 performing tasks with GPT-4 integration</p> <!-- Video caption -->
 
-        <h2 class="small-heading">Experimental Video Analysis</h2> <!-- Small heading for a new section -->
+        <h2 class="small-heading">take a selfie with your phone</h2> <!-- Small heading for a new section -->
         <div class="video-container">
             <iframe width="423" height="752" src="https://www.youtube.com/embed/xKlTKDyis6Q" title="selfie" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
         <p class="video-caption">Video 1: Humanoid robot ALTER3 performing tasks with GPT-4 integration</p> <!-- Video caption -->
 
 
-        <h2 class="small-heading">Experimental Video Analysis</h2> <!-- Small heading for a new section -->
+        <h2 class="small-heading">throwing the ball underhand pitch</h2> <!-- Small heading for a new section -->
         <div class="video-container">
             <iframe width="423" height="752" src="https://www.youtube.com/embed/syqMLPh2pSk" title="throw the ball" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
         <p class="video-caption">Video 1: Humanoid robot ALTER3 performing tasks with GPT-4 integration</p> <!-- Video caption -->
 
-        <h2 class="small-heading">Experimental Video Analysis</h2> <!-- Small heading for a new section -->
+        <h2 class="small-heading">pretend the snake</h2> <!-- Small heading for a new section -->
         <div class="video-container">
             <iframe width="423" height="752" src="https://www.youtube.com/embed/_ZBrvYoKNlA" title="pretend snake" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
         <p class="video-caption">Video 1: Humanoid robot ALTER3 performing tasks with GPT-4 integration</p> <!-- Video caption -->
 
-        <h2 class="small-heading">Experimental Video Analysis</h2> <!-- Small heading for a new section -->
+        <h2 class="small-heading"> In the park, as I jogged, the world seemed to narrate an ancient tale of survival, each footfall echoing eons of existence.</h2> <!-- Small heading for a new section -->
         <div class="video-container">
             <iframe width="423" height="752" src="https://www.youtube.com/embed/VJ4FNcldEz0" title="jogging" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
         <p class="video-caption">Video 1: Humanoid robot ALTER3 performing tasks with GPT-4 integration</p> <!-- Video caption -->
 
-        <h2 class="small-heading">Experimental Video Analysis</h2> <!-- Small heading for a new section -->
+        <h2 class="small-heading">drink some tea</h2> <!-- Small heading for a new section -->
         <div class="video-container">
             <iframe width="423" height="752" src="https://www.youtube.com/embed/RECDvDoBRS0" title="drink a tea" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
         <p class="video-caption">Video 1: Humanoid robot ALTER3 performing tasks with GPT-4 integration</p> <!-- Video caption -->
 
-        <h2 class="small-heading">Experimental Video Analysis</h2> <!-- Small heading for a new section -->
+        <h2 class="small-heading">play the guitar</h2> <!-- Small heading for a new section -->
         <div class="video-container">
             <iframe width="423" height="752" src="https://www.youtube.com/embed/KZMrL_6zX6o" title="guitar" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
