--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             font-weight: normal;
             color: #2e2e2e;
             margin-top: 30px;
-            text-align: center;
+            text-align: left;
         }
         .author {
             font-size: 1.2em;
