--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
             height: 100%;
         }
         .small-heading {
-            font-size: 1.0em;
-            font-weight: normal;
+            font-size: 1.4em;
+            font-weight: bold;
             color: #2e2e2e;
             margin-top: 30px;
             text-align: left;
