--- a/index.html
+++ b/index.html
@@ -51,6 +51,16 @@
         sup {
         font-size: 0.75em;
         }
+        .images-container {
+            text-align: center; /* 画像を中央揃えにする */
+            margin-top: 20px; /* 上のコンテンツとの間隔を開ける */
+        }
+        .image {
+            width: 100px; /* 画像の幅を適宜設定 */
+            height: auto; /* 高さを自動調整してアスペクト比を維持 */
+            margin: 0 10px; /* 画像の間に余白を設定 */
+            display: inline-block; /* 画像をインラインブロック要素として表示 */
+        }
         .results-section {
             font-size: 1.0em; /* Adjust size as needed */
             text-align: left;
