--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
             margin-top: 20px; /* 上のコンテンツとの間隔を開ける */
         }
         .image {
-            width: 100px; /* 画像の幅を適宜設定 */
+            width: 150px; /* 画像の幅を適宜設定 */
             height: auto; /* 高さを自動調整してアスペクト比を維持 */
-            margin: 0 10px; /* 画像の間に余白を設定 */
+            margin: 0 30px; /* 画像の間に余白を設定 */
             display: inline-block; /* 画像をインラインブロック要素として表示 */
         }
         .results-section {
@@ -108,10 +108,8 @@
     <div class="container">
         <h1><span class="highlighted-title">From Text to Motion:</span><br>Harnessing GPT-4 for the Autonomous Pose Generation in Humanoid Robot ALTER3</h1>
         <div class="author-info">
-            <p class="author">Takahide Yoshida<sup>1,*</sup>, Atsushi Masumori<sup>1,2</sup>, and Takashi Ikegami<sup>1,2</sup></p>
-            <p class="affiliation"><sup>1</sup>Department of General Systems Science, University of Tokyo, Tokyo, Japan</p>
-            <p class="affiliation"><sup>2</sup>Alternative Machine Inc., Tokyo, Japan</p>
-            <p class="corresponding-author"><sup>*</sup>yoshida@sacral.c.u-tokyo.ac.jp</p>
+            <p class="author">Takahide Yoshida<sup>1</sup>, Atsushi Masumori<sup>1,2</sup>, and Takashi Ikegami<sup>1,2</sup></p>
+            <p class="affiliation"><sup>1</sup>Department of General Systems Science, University of Tokyo, Tokyo, Japan<sup>2</sup>Alternative Machine Inc., Tokyo, Japan<</p>
           </div>
         <div class="images-container">
             <img src="./UnivOfTokyo_logo.png" alt="First Image" class="image">
