--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
         .highlighted-title {
             font-size: 1.2em; /* Adjust size as needed */
             font-weight: bold;
+            margin-top: 40px;
         }
 
         /* Styles for the title to be split on two lines */
