--- a/index.html
+++ b/index.html
@@ -82,7 +82,6 @@
         .highlighted-title {
             font-size: 1.2em; /* Adjust size as needed */
             font-weight: bold;
-            margin-top: 40px;
         }
 
         /* Styles for the title to be split on two lines */
@@ -107,7 +106,7 @@
 </head>
 <body>
     <div class="container">
-        <h1><span class="highlighted-title">From Text to Motion:</span><br>Harnessing GPT-4 for the Autonomous Pose Generation in Humanoid Robot ALTER3</h1>
+        <h1 style="margin-top: 40px;"><span class="highlighted-title">From Text to Motion:</span><br>Harnessing GPT-4 for the Autonomous Pose Generation in Humanoid Robot ALTER3</h1>
         <div class="author-info">
             <p class="author">Takahide Yoshida<sup>1</sup>, Atsushi Masumori<sup>1,2</sup>, and Takashi Ikegami<sup>1,2</sup></p>
             <p class="affiliation"><sup>1</sup>Department of General Systems Science, University of Tokyo, Tokyo, Japan     <sup>2</sup>Alternative Machine Inc., Tokyo, Japan<</p>
