--- a/index.html
+++ b/index.html
@@ -102,10 +102,10 @@
             margin-bottom: 10px; /* Space below the Abstract heading */
         }
         .collapsible {
-            background-color: #777;
+            background-color: #d4d6ff;
             color: white;
             cursor: pointer;
-            padding: 18px;
+            padding: 5px;
             width: 100%;
             border: none;
             text-align: left;
@@ -194,12 +194,20 @@
             <iframe width="423" height="752" src="https://www.youtube.com/embed/qNldkPX-y0w" title="shy" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
         <p class="video-caption">Video 1: Humanoid robot ALTER3 performing tasks with GPT-4 integration</p> <!-- Video caption -->
+        <button type="button" class="collapsible">▼ Open Collapsible</button>
+        <div class="content">
+          <p>This is the collapsible content. It is hidden by default, and will be shown when you click on the button above.</p>
+        </div>
 
         <h3 class="small-heading">take a selfie with your phone</h3> <!-- Small heading for a new section -->
         <div class="video-container">
             <iframe width="423" height="752" src="https://www.youtube.com/embed/xKlTKDyis6Q" title="selfie" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
         <p class="video-caption">Video 1: Humanoid robot ALTER3 performing tasks with GPT-4 integration</p> <!-- Video caption -->
+        <button type="button" class="collapsible">▼ Open Collapsible</button>
+        <div class="content">
+          <p>This is the collapsible content. It is hidden by default, and will be shown when you click on the button above.</p>
+        </div>
 
 
         <h3 class="small-heading">throwing the ball underhand pitch</h3> <!-- Small heading for a new section -->
@@ -207,8 +215,17 @@
             <iframe width="423" height="752" src="https://www.youtube.com/embed/syqMLPh2pSk" title="throw the ball" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
         <p class="video-caption">Video 1: Humanoid robot ALTER3 performing tasks with GPT-4 integration</p> <!-- Video caption -->
+        <button type="button" class="collapsible">▼ Open Collapsible</button>
+        <div class="content">
+          <p>This is the collapsible content. It is hidden by default, and will be shown when you click on the button above.</p>
+        </div>
 
         <h3 class="small-heading">pretend the snake</h3> <!-- Small heading for a new section -->
+        <button type="button" class="collapsible">▼ Open Collapsible</button>
+        <div class="content">
+          <p>This is the collapsible content. It is hidden by default, and will be shown when you click on the button above.</p>
+        </div>
+
         <div class="video-container">
             <iframe width="423" height="752" src="https://www.youtube.com/embed/_ZBrvYoKNlA" title="pretend snake" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
@@ -219,21 +236,27 @@
             <iframe width="423" height="752" src="https://www.youtube.com/embed/VJ4FNcldEz0" title="jogging" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
         <p class="video-caption">Video 1: Humanoid robot ALTER3 performing tasks with GPT-4 integration</p> <!-- Video caption -->
+        <button type="button" class="collapsible">▼ Open Collapsible</button>
+        <div class="content">
+          <p>This is the collapsible content. It is hidden by default, and will be shown when you click on the button above.</p>
+        </div>
 
         <h3 class="small-heading">drink some tea</h3> <!-- Small heading for a new section -->
         <div class="video-container">
             <iframe width="423" height="752" src="https://www.youtube.com/embed/RECDvDoBRS0" title="drink a tea" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
         <p class="video-caption">Video 1: Humanoid robot ALTER3 performing tasks with GPT-4 integration</p> <!-- Video caption -->
+        <button type="button" class="collapsible">▼ Open Collapsible</button>
+        <div class="content">
+          <p>This is the collapsible content. It is hidden by default, and will be shown when you click on the button above.</p>
+        </div>
 
         <h3 class="small-heading">play the guitar</h3> <!-- Small heading for a new section -->
         <div class="video-container">
             <iframe width="423" height="752" src="https://www.youtube.com/embed/KZMrL_6zX6o" title="guitar" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
         <p class="video-caption">Video 1: Humanoid robot ALTER3 performing tasks with GPT-4 integration</p> <!-- Video caption -->
-        <h4>My Collapsible</h4>
-        <p>Click on the button to toggle between hiding and showing the collapsible content.</p>
-        <button type="button" class="collapsible">Open Collapsible</button>
+        <button type="button" class="collapsible">▼ Open Collapsible</button>
         <div class="content">
           <p>This is the collapsible content. It is hidden by default, and will be shown when you click on the button above.</p>
         </div>
