--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         }
         .collapsible {
             background-color: #d4d6ff;
-            color: white;
+            color: rgb(105, 105, 105);
             cursor: pointer;
             padding: 5px;
             width: 100%;
@@ -347,6 +347,12 @@
             <p>"6 Show a fierce, passionate smile, reflecting the intensity of the music",</p>
             <p>"7 Suddenly throw head back, mimicking a dramatic guitar solo",</p>
             <p>"8 Slowly return to rest position, but maintain the intense facial expression, as if still hearing the echoes of the metal music"</p>
+        </div>
+
+        <div class="method-section">
+            <h2>Discussion</h2>
+            <p>Alter3 partially answers the question of whether embodiment is necessary for LLMs (Large Language Models). First of all, Alter3 can perform many actions without any additional training. This implies that the dataset on which the LLM was trained already includes descriptions of movements. In other words, Alter3 enables zero-shot learning. Moreover, it can mimic ghosts and animals (or people mimicking animals), which is quite astonishing. Furthermore, it can understand the content of the conversations it hears and reflect whether the story is sad or happy through its facial expressions and gestures.Our system could be applied to any humanoid android with only minor modifications. Up to this point, it's clear how much agency Alter3 has gained through the LLM. </p>
+            <!-- More figures as needed -->
         </div>
         
         <!-- More content here -->
