--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         }
         .collapsible {
             background-color: #d4d6ff;
-            color: rgb(105, 105, 105);
+            color: rgb(133, 133, 133);
             cursor: pointer;
             padding: 5px;
             width: 100%;
@@ -114,7 +114,7 @@
             }
 
             .active, .collapsible:hover {
-            background-color: #555;
+            background-color: #6a79ff;
             }
 
             .content {
