--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 </head>
 <body>
     <div class="container">
-        <h1 style="margin-top: 50px;"><span class="highlighted-title">From Text to Motion:</span><brGrounding GPT-4\\ in a Humanoid Robot "Alter3"</h1>
+        <h1 style="margin-top: 50px;"><span class="highlighted-title">From Text to Motion:</span><br>Grounding GPT-4 in a Humanoid Robot "Alter3"</h1>
         <div class="author-info">
             <p class="author">Takahide Yoshida<sup>1</sup>, Atsushi Masumori<sup>1,2</sup>, and Takashi Ikegami<sup>1,2</sup></p>
             <p class="affiliation"><sup>1</sup>Department of General Systems Science, University of Tokyo, Tokyo, Japan     <sup>2</sup>Alternative Machine Inc., Tokyo, Japan<</p>
