--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@ This result shows that the system can generate a wide range of movements, from e
         <h2>Motions</h2>
         <h3 class="small-heading">I was enjoying a movie while eating popcorn at the theater when I realized that I was actually eating the popcorn of the person next to me.</h3> <!-- Small heading for a new section -->
         <div class="video-container">
-            <iframe width="1244" height="700" src="https://www.youtube.com/embed/cDDThaua3GY" title="pop corn" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <iframe width="1244" height="700" src="https://www.youtube.com/embed/a0T1oE54KSc" title="popcorn" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
         <p class="video-caption">Video3: Can ALTER3 express feelings of embarrassment?</p> <!-- Video caption -->
         <button type="button" class="collapsible">▼ Showing surprise and amusement at the story, several exaggerated motions are below</button>
